--- a/src/templates/partials/mainLayout.jade
+++ b/src/templates/partials/mainLayout.jade
@@ -7,13 +7,10 @@ html
     link(rel='icon', type='image/png', sizes='32x32', href='img/favicon.png') 
 
     link(rel='stylesheet', href='assets/libs/bootstrap/dist/css/bootstrap.css')
-    link(rel='stylesheet', href='assets/libs/prism/prism.css')
+    //- link(rel='stylesheet', href='assets/libs/prism/prism.css')
     link(rel='stylesheet', href='assets/css/pe-slider.css')
     
-    link(rel='stylesheet', href='assets/fonts/pe-icon-set-edition/css/pe-icon-set-edition.css')
-    link(rel='stylesheet', href='assets/fonts/pe-icon-set-edition/css/helper.css')
-    link(rel='stylesheet', href='assets/fonts/pe-icon-social/css/pe-icon-social.css')
-    link(rel='stylesheet', href='assets/fonts/pe-icon-social/css/social-style.css')
+    //- link(rel='stylesheet', href='assets/fonts/url-to-icon-font/css/icon-font.css')
     
     link(rel='stylesheet', href='assets/css/style.css')
   body
@@ -31,7 +28,7 @@ html
     // Libs scripts
     script(type='text/javascript', src='assets/libs/jquery/dist/jquery.js')
     script(type='text/javascript', src='assets/libs/bootstrap/dist/js/bootstrap.js')
-    script(type='text/javascript', src='assets/libs/prism/prism.js')
+    //- script(type='text/javascript', src='assets/libs/prism/prism.js')
     script(type='text/javascript', src='assets/js/fontsmoothie.min.js')
     // Pe Plugins
     script(type='text/javascript', src='assets/js/pe-slider.min.js')
