--- a/src/styles/partials/_layout.scss
+++ b/src/styles/partials/_layout.scss
@@ -1,140 +1,216 @@
 
-
-
-
-
-
-
-
-
-/* 
-**
-**  Sections Stuff
-**
-*/
-
-
-.section {
-  overflow: hidden;
-  position: relative;
-  padding: 70px 0;
-  background-color: #fff;
-
-  &.first { padding-top: 130px; }
-
-}
-
-@include coloring($colors, section-, false) {
-  
-
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $container-width;
 }
 
 
 
 
-/* Section Background specific */
 
+.items {
+  &__item {
+    margin-bottom: 0;
+    margin-top: 26px;
+    transition: .3s;
+  }
+}
 
-.section-background {
-  background-size: cover;
+.item-image {
+  background-color: $pink;
   background-position: center center;
-  &.fixed { background-attachment: fixed; z-index: 90; }
+  background-repeat: no-repeat;
+  // background-size: cover;
+  background-size: auto 100%;
+  display: block;
+  flex: 1 1 auto;
+  max-height: 133px;
+  min-height: 133px;
+  position: relative;
+
+  &:empty { background-color: darken( $light, 5); }
 }
 
+.item-content {  
+  background-color: $white;
+  flex: 1 1 auto; 
+  padding: 22px;
+  position: relative;
 
-.parallax { 
-  overflow: hidden; 
-  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-  .parallaxing {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    background-size: cover;
-    background-position: center center;
+.item-title {
+  font-size: 32px;
+  font-weight: 400;
+  letter-spacing: -.3px;
+  line-height: 1.2381em;
+  padding-top: .219em;  
+}
+
+.item-desc {
+  font-size: 14px;
+  line-height: 1.5;
+  margin-top: 10px;
+  flex: 2;
+}
+
+.item-meta {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;  
+}
+
+.item-tags {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 75%;
+
+  a {
+    background-color: $light;
+    font-size: 11px;
+    margin: 2px;
+    padding: 3px 5px;
+    text-transform: uppercase;
+    transition: .3s;
+
+    &:hover { background-color: darken($light, 5); }
+  }
+  
+}
+
+.item-links {
+  display: flex;
+  
+  a {
+    flex: 1 0 auto;
+    height: 22px;
+    margin-right: 10px;
+    width: 22px;
+    
+    svg { height: 100%; width: 100%; }
+    use { fill: #bcbdc0; }
+
   }
 
-  &.h-2x .parallaxing {
-    height: 200vh;
+  a:hover use { fill: $pink !important; }
+
+}
+
+
+
+.search-icon {
+  cursor: pointer;
+  height: 25px;
+  left: 9px;
+  position: absolute;
+  top: 9px;
+  vertical-align: middle;
+  width: 25px;
+}
+
+.main-search {
+  background-color: rgba($white, .5);
+  display: inline-block;
+  margin: 0 auto 20px;
+  
+  label {
+    display: block;
+    position: relative;
   }
+
+  input {
+    background-color: transparent;
+    border: 0;
+    color: $dark;
+    font-size: 16px;
+    height: 40px;
+    margin-left: 40px;
+    margin-right: 10px;
+  }
+
+  &.top {
+    position: fixed;
+    right: 50px;
+    top: 30px;
+    transition: .3s;
+    z-index: 20;
+  }
+
+}
+
+
+::-webkit-input-placeholder {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;
+}
+
+:-moz-placeholder {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;  
+}
+
+::-moz-placeholder {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;  
+}
+
+:-ms-input-placeholder {  
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;  
 }
 
 
 
 
-
-
-
-
-
-
-
-/* 
-**
-**  Typo Stuff
-**
-*/
-
-
-
-h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5 { 
-  font-family: 'Aileron-Regular';
+.text--center {
+  text-align: center;
 }
 
-h1, .h1 { font-size: 48px; }
-h2, .h2 { font-size: 39px; }
-h3, .h3 { font-size: 32px; }
-h4, .h4 { font-size: 27px; }
-h5, .h5 { font-size: 22px; }
-
-.super-h { font-size: 54px; }
-
-.subtitle { 
-  font-size: 36px; 
-
-  i { 
-    font-size: 1.66em; margin-right: .33em; }
-}
-
-
-.h-light { font-family: 'Aileron-Light'; }
-.h-regular { font-family: 'Aileron-Regular'; }
-.h-semibold { font-family: 'Aileron-SemiBold'; }
-.h-bold { font-family: 'Aileron-Bold'; }
-.h-black { font-family: 'Aileron-Black'; }
-.h-heavy { font-family: 'Aileron-Heavy'; }
-
-.text-regular { font-family: 'Cabin-Regular';}
-.text-medium { font-family: 'Cabin-Medium'; }
-.text-bold { font-family: 'Cabin-Bold'; }
-
-.text-normalcase { text-transform: none; }
-.text-uppercase { text-transform: uppercase; }
-
-.text-truncate {
+.text--truncate {
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
 }
-
 
 a {
-  color:currentColor;
-  
-  &:hover, &:focus { 
-    color:currentColor; }
-
-  &:active, &:focus { 
-    outline:0 }
+  color: inherit;
+  text-decoration: none;
 }
 
 
-hr {
+// ---------------
+//  Sections Stuff
+// ---------------
+
+.header {
+  left: 0;
+  position: fixed;
+  text-align: center;
+  top: 0;
+  width: 100%;
+
+  &.top {
+    background-color: $light;
+    text-align: left;
+    z-index: 10;
+  }
+}
+
+.section {
+  margin-top: 250px;
+  overflow: hidden;
+  padding: 70px 0;
   position: relative;
-  color: inherit;
-  width: 120px;
-  border-top: 1px solid;
+}
+
+.footer {
+  background-color: $dark;
+  min-height: 200px;
 }
 
 
@@ -143,66 +219,144 @@ hr {
 }
 
 
-input[placeholder] { text-overflow: ellipsis; }
-::-moz-placeholder { text-overflow: ellipsis; } /* firefox 19+ */
-input:-moz-placeholder { text-overflow: ellipsis; }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-**
-**  Slider Specific Stuff 
-**
-*/
-
-
-.slider_elem {
+.alt-logo {
+  bottom: 0;
+  height: 100px;
+  left: 0;
+  margin: auto;
   position: absolute;
+  right: 0;
+  top: 0;   
 }
 
+.main-icon {
+  margin: 70px auto 40px;
+  text-align: center;
 
+  svg {
+    height: 150px;
+    transform: translateX(20px);
+  }
 
+  .top & {
+    display: inline-block;
+    margin: 20px auto;
+    text-align: left;
+    transition: opacity .3s;
 
-// Pe-slider overrides
+    svg {
+      display: inline-block;
+      height: 61px;
+      vertical-align: middle;
+      width: 43px;     
+    }
+  }
 
+}
 
+.big-title {
+  font-size: 49px;
+  font-weight: 700;
+  margin: .15em 0 .1em;
 
+  .top & {
+    display: inline-block;
+    font-size: 34px;
+    margin-left: 10px;
+    vertical-align: middle;
+  }
+}
 
+.copy {
+  font-weight: 700;
+  .top & { display: none; }
+}
 
+.items-layout {
+  cursor: pointer;
+  height: 20px;
+  position: fixed;
+  right: 15px;
+  top: 40px;  
+  width: 20px;
+  z-index: 999;
+  
+  svg {
+    fill: $dark;
+    height: 100%;
+    position: absolute;
+    transition: opacity .3s;
+    width: 100%;
+  }
 
+  &:hover svg { fill: $pink; }
 
+  .layout-th { opacity: 0; }
+  #input-layout:checked + & .layout-list { opacity: 0; }
+  #input-layout:checked + & .layout-th { opacity: 1; }
+}
 
+#input-layout { display: none; }
 
+#input-layout:checked ~ #items { 
 
+  .items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .items__item { 
+    display: flex;
+    flex-direction: row; 
+    text-align: left;
+  }
+  .half { width: 100%; }
+
+  .item-image {
+    flex: 0 0 auto;
+    max-height: none;
+    width: 150px;
+    background-size: 100% auto;
+  }
+
+  .item-content {  padding: 10px 20px; }
+  .alt-logo { width: 50%; }
+  
+}
+
+@media only screen and (min-width: 620px) {
+  
+  .items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+    &__item {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      text-align: left;
+    }
+  }
+
+  .half {
+    box-sizing: border-box;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: calc(100% / 2);
+  }
+
+  #input-layout:checked ~ #items .item-image { width: 150px; }
+  .main-icon svg { height: 300px; }
+  .big-title { font-size: 76px; }
+  .section { margin-top: 450px; }
+}
+
+@media (max-width: 619px) { 
+  .top .big-title { display: none; }
+  .main-search.top { 
+    input { width: 0; }
+    input:focus { width: auto;}
+  }
+}
