--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,25 +1,8 @@
-/*
-  
-
-
-   ____  ____  _  _  ____  ____  ____  _  _ 
-  (  _ \(_  _)( \/ )( ___)(  _ \( ___)( \( )
-  )___/ _)(_  )  (  )__)  )(_) ))__)  )  ( 
-  (__)  (____)(_/\_)(____)(____/(____)(_)\_)
-
-
-
-
-
-
-
-*/
-
-// @import "partials/resets";
-@import "partials/typography";
-@import "partials/base";
-@import "partials/layout";
-@import "partials/modules";
-@import "partials/grids";
-@import "partials/overrides";
-@import "partials/responsive";
+@import 'partials/resets';
+@import 'partials/typography';
+@import 'partials/base';
+@import 'partials/layout';
+@import 'partials/modules';
+@import 'partials/grids';
+@import 'partials/overrides';
+@import 'partials/responsive';
