--- a/src/templates/partials/mainLayout.jade
+++ b/src/templates/partials/mainLayout.jade
@@ -3,8 +3,8 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(charset='UTF-8')
-    title Sassisfaction :: Awesome resources
-    link(rel='icon', type='image/png', sizes='32x32', href='img/favicon.png') 
+    title Sassisfaction :: Awesome Sass Resources
+    link(rel="shortcut icon", href="assets/img/favicon.ico")
     link(href='http://fonts.googleapis.com/css?family=PT+Sans:400,700',rel='stylesheet',type='text/css')
     link(href='http://fonts.googleapis.com/css?family=Roboto:400,300,500',rel='stylesheet',type='text/css')
     
