--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -28,47 +28,41 @@ block content
   section.section#items.row
     .container
       .items
-        .items__item.half
+        .items__item.half.fake
           a(href='#0').item-image 
             svg.alt-logo
               use(xlink:href='assets/img/symbols.svg#alt-logo')
           .item-content
             h3.item-title  
-              a(href='#0') Resource title
-            p.item-desc Polycasts with Rob Dodson guide you through web development with Polymer, starting with using basic Polymer elements through to building a complete web app with routing and responsive elements.
+              a(href='#0') Title
+            p.item-desc Lorem ipsum dolor sit amet, consectetur adipisicing.
             .item-meta
               .item-tags
-                a(href='#0') author
-                a(href='#0') news
-                a(href='#0') development
-                a(href='#0') bkjhkjhkh
-                a(href='#0') tag1
-                a(href='#0') tag1
-                a(href='#0') tag1
-                a(href='#0') tag1
-                a(href='#0') tag1
+                button tag
 
-              .item-links 
-                a(href='#0')
-                  svg
-                    use(xlink:href='assets/img/symbols.svg#icon-pin')
-                a(href='#0')
-                  svg
-                    use(xlink:href='assets/img/symbols.svg#icon-info')
-                a(href='#0')
-                  svg
-                    use(xlink:href='assets/img/symbols.svg#icon-link')
-        .items__item.half
-          .item-image 
+        .items__item.half.fake
+          a(href='#0').item-image 
+            svg.alt-logo
+              use(xlink:href='assets/img/symbols.svg#alt-logo')
           .item-content
-            h3.item-title  Resource title
-            p.item-desc Polycasts with Rob Dodson guide you through web development with Polymer, starting with using basic Polymer elements through to building a complete web app with routing and responsive elements.      
-        
-        .items__item.half
-          .item-image 
+            h3.item-title  
+              a(href='#0') Title
+            p.item-desc  Porro odit animi maiores magnam et quisquam delectus ipsam ratione.
+            .item-meta
+              .item-tags
+                button tag
+
+        .items__item.half.fake
+          a(href='#0').item-image 
+            svg.alt-logo
+              use(xlink:href='assets/img/symbols.svg#alt-logo')
           .item-content
-            h3.item-title  Resource title
-            p.item-desc Polycasts with Rob Dodson guide you through web development with Polymer, starting with using basic Polymer elements through to building a complete web app with routing and responsive elements.      
+            h3.item-title  
+              a(href='#0') Title
+            p.item-desc  Eveniet quos asperiores, optio amet consectetur delectus fugit, officia ut.
+            .item-meta
+              .item-tags
+                button tag
         
   footer.footer
     p Made with 
