--- a/src/templates/partials/mainLayout.jade
+++ b/src/templates/partials/mainLayout.jade
@@ -13,12 +13,8 @@ html
 
     block content
 
-    // Livereload Script -- remove on production
-    script.
-      document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-    
     script(type='text/javascript', src='assets/js/pe-scrollchange.min.js')
-    script(type='text/javascript', src='assets/js/main.js')
+    script(type='text/javascript', src='assets/js/main.min.js')
 
     block scripts
 
