--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -70,10 +70,10 @@ block content
       |  and React by 
       a(href='https://twitter.com/elrumordelaluz') elrumordelaluz
     p 
-      a(href='#0') 
+      a(href='https://github.com/elrumordelaluz/Sassisfaction/blob/gh-pages/sassisfaction.json') 
         span Submit Resources 
       | or 
-      a(href='#0') Issues
+      a(href='https://github.com/elrumordelaluz/Sassisfaction/issues') Issues
 
 
       
