--- a/src/styles/partials/_layout.scss
+++ b/src/styles/partials/_layout.scss
@@ -118,8 +118,25 @@
   left: 9px;
   position: absolute;
   top: 9px;
-  vertical-align: middle;
   width: 25px;
+}
+
+.close-icon {
+  background-color: rgba($white, .5);;
+  cursor: pointer;
+  height: 15px;
+  opacity: 0;
+  position: absolute;
+  right: 12px;
+  top: 14px;
+  visibility: hidden;
+  width: 15px;
+  z-index: 100;
+
+  &.show {
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 .main-search {
