--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -73,7 +73,12 @@ block content
       a(href='https://github.com/elrumordelaluz/Sassisfaction/blob/gh-pages/sassisfaction.json') 
         span Submit Resources 
       | or 
-      a(href='https://github.com/elrumordelaluz/Sassisfaction/issues') Issues
+      a(href='https://github.com/elrumordelaluz/Sassisfaction/issues') Tell some Issue
+    p
+      a.twitter-share-button(href="https://twitter.com/share", data-via="elrumordelaluz") Tweet
+      script.
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+      iframe(src="https://ghbtns.com/github-btn.html?user=elrumordelaluz&repo=Sassisfaction&type=star&count=true",frameborder="0",scrolling="0",width="76",height="20px")
 
 
       
