reverse() Last items first

--- a/src/templates/partials/mainLayout.jade
+++ b/src/templates/partials/mainLayout.jade
@@ -4,6 +4,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(charset='UTF-8')
     title Sassisfaction :: Awesome Sass Resources
+    meta(name='description' content='A place to share awesome Sass resources. It\'s easy to search stuff and it\'s really simple to contribute.')
     link(rel="shortcut icon", href="assets/img/favicon.ico")
     link(href='http://fonts.googleapis.com/css?family=PT+Sans:400,700',rel='stylesheet',type='text/css')
     link(href='http://fonts.googleapis.com/css?family=Roboto:400,300,500',rel='stylesheet',type='text/css')
